--- a/code/wscapp-pantheon-api/pom.xml
+++ b/code/wscapp-pantheon-api/pom.xml
@@ -21,7 +21,7 @@
         </dependency>
         <dependency>
             <groupId>com.onsystem</groupId>
-            <artifactId>wscapp-pantheon-api-request</artifactId>
+            <artifactId>wscapp-pantheon-api-dto</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
