changes: error conflicts mapstruct with lombok solved

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -19,6 +19,8 @@
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
+        <org.projectlombok.version>1.18.30</org.projectlombok.version>
+
     </properties>
 
     <modules>
@@ -70,6 +72,13 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${org.projectlombok.version}</version>
+                <scope>provided</scope>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -86,13 +95,8 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
-            <scope>provided</scope>
-        </dependency>
+        <!-- lombok dependencies should not end up on classpath -->
+
 
     </dependencies>
 
