feature: implement map struct initial test

--- a/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/pom.xml
+++ b/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/pom.xml
@@ -94,6 +94,9 @@
                                 <version>${lombok-mapstruct-binding.version}</version>
                             </path>
                         </annotationProcessorPaths>
+                        <compilerArgs>
+                            <arg>-Amapstruct.verbose=true</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
             </plugins>
