changes: test can insert with uniq property entity id, and configure map struct language entity

--- a/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/src/test/resources/application.yml
+++ b/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/src/test/resources/application.yml
@@ -15,4 +15,5 @@ spring:
       globally_quoted_identifiers: true
       ddl-auto: create
       dialect: org.hibernate.dialect.H2Dialect
+      enable_lazy_load_no_trans: true
     show-sql: true
