--- a/code/pom.xml
+++ b/code/pom.xml
@@ -95,8 +95,12 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- lombok dependencies should not end up on classpath -->
-
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
