added reference api-inteface/test in module model/test

--- a/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/pom.xml
+++ b/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/pom.xml
@@ -93,6 +93,20 @@
                         </compilerArgs>
                     </configuration>
                 </plugin>
+
+                <plugin>
+                    <!-- Para generar un jar y de la carpeta test -->
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>${maven-jar-plugin.version}</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
