changes: implement entities tables user_attribute, user_permission, user_role

--- a/code/wscapp-pantheon-boot/src/main/resources/application.yml
+++ b/code/wscapp-pantheon-boot/src/main/resources/application.yml
@@ -5,14 +5,12 @@ spring:
     url: jdbc:postgresql://localhost:5432/management
     username: postgres
     password: postgres
-    initialization-mode: never
 
   jpa:
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        ddl-auto: create
-        default-schema: applications, enterprise, users, public
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+    database: postgresql
 
   logging:
     level:
