--- a/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/pom.xml
+++ b/code/wscapp-pantheon-api/wscapp-pantheon-api-interface/pom.xml
@@ -39,6 +39,13 @@
             <version>42.6.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.mapstruct</groupId>
