--- a/code/wscapp-pantheon-commons/pom.xml
+++ b/code/wscapp-pantheon-commons/pom.xml
@@ -15,6 +15,8 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+
     </properties>
 
     <dependencies>
@@ -24,5 +26,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.1.4</version>
         </dependency>
+
+
     </dependencies>
+
+    <build>
+        <plugins>
+
+        </plugins>
+    </build>
 </project>
