creation repository and test directory

--- a/code/wscapp-pantheon-output/wscapp-pantheon-output-controller/pom.xml
+++ b/code/wscapp-pantheon-output/wscapp-pantheon-output-controller/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>org.example</groupId>
+
     <artifactId>wscapp-pantheon-output-controller</artifactId>
 
     <properties>
@@ -17,5 +17,13 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.onsystem</groupId>
+            <artifactId>wscapp-pantheon-output-model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
