--- a/code/wscapp-pantheon-output/wscapp-pantheon-output-api/wscapp-pantheon-output-api-interface/pom.xml
+++ b/code/wscapp-pantheon-output/wscapp-pantheon-output-api/wscapp-pantheon-output-api-interface/pom.xml
@@ -27,12 +27,16 @@
             <artifactId>wscapp-pantheon-commons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.onsystem</groupId>
+            <artifactId>wscapp-pantheon-output-api-dto</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
         </dependency>
+
     </dependencies>
 
 
