changes: correction dependency datasource

--- a/code/wscapp-pantheon-input/wscapp-pantheon-input-api/wscapp-pantheon-input-api-interface/pom.xml
+++ b/code/wscapp-pantheon-input/wscapp-pantheon-input-api/wscapp-pantheon-input-api-interface/pom.xml
@@ -39,6 +39,20 @@
             <version>${org.mapstruct.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.6.0</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+        </dependency>
+
     </dependencies>
 
     <build>
