--- a/code/wscapp-pantheon-output/wscapp-pantheon-output-controller/pom.xml
+++ b/code/wscapp-pantheon-output/wscapp-pantheon-output-controller/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.onsystem</groupId>
+            <artifactId>wscapp-pantheon-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>com.onsystem</groupId>
             <artifactId>wscapp-pantheon-output-model</artifactId>
