changes: guardar cosas hasta ahora pero no funciona, se van a generar distintos repostorios

--- a/code/pom.xml
+++ b/code/pom.xml
@@ -29,6 +29,7 @@
         <module>wscapp-pantheon-output</module>
         <module>wscapp-pantheon-auth</module>
         <module>wscapp-pantheon-security</module>
+        <module>wscapp-pantheon-auth-resource-server</module>
     </modules>
 
 
