--- a/code/wscapp-pantheon-auth/src/main/resources/application.yml
+++ b/code/wscapp-pantheon-auth/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 logging:
   level:
-    org.springframework.security: trace
+    root: TRACE
 
 spring:
   security:
@@ -22,8 +22,6 @@ spring:
               authorization-grant-types:
                 - "authorization_code"
                 - "refresh_token"
-              redirect-uris:
-                - "http://127.0.0.1:8080/login/oauth2/code/oidc-client"
               post-logout-redirect-uris:
                 - "http://127.0.0.1:8080/"
               scopes:
