--- a/code/wscapp-pantheon-output/wscapp-pantheon-output-boot/src/main/resources/application.yml
+++ b/code/wscapp-pantheon-output/wscapp-pantheon-output-boot/src/main/resources/application.yml
@@ -1,11 +1,14 @@
 # Configuración para PostgreSQL
+logging:
+  level:
+    root: TRACE
 
 spring:
   devtools:
     livereload:
       enabled: true
   profiles:
-    active: db-postgres
+    active: db-h2
 
   security:
     oauth2:
@@ -14,23 +17,12 @@ spring:
           pantheon:
             clientId: "oidc-client"
             clientSecret: "secret"
-            authorization-grant-type: "confidential"
-
+            authorization-grant-type: "authorization_code"
+            redirect-uri: http://localhost:8080/login/oauth2/code/oidc-client
         provider:
           pantheon:
-            authorization-uri: http://localhost:9000/oauth/authorize
-            token-uri: http://localhost:9000/oauth/token
-            user-info-uri: http://localhost:9000/userinfo
-            user-name-attribute: sub
+            authorization-uri: http://localhost:9000/oauth2/authorize
+            token-uri: http://localhost:9000/oauth2/token
+            #user-info-uri: http://localhost:9000/userinfo
+            #user-name-attribute: sub
 
-      resourceserver:
-        jwt:
-          issuer-uri: http://localhost:9000/login
-
-  logging:
-    level:
-      org:
-        springframework:
-          validation: DEBUG
-        hibernate:
-          validator: DEBUG
