--- a/code/wscapp-pantheon-output/wscapp-pantheon-output-model/pom.xml
+++ b/code/wscapp-pantheon-output/wscapp-pantheon-output-model/pom.xml
@@ -25,6 +25,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.onsystem.pantheon</groupId>
+            <artifactId>security</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
