--- a/code/wscapp-pantheon-output/wscapp-pantheon-output-model/pom.xml
+++ b/code/wscapp-pantheon-output/wscapp-pantheon-output-model/pom.xml
@@ -31,6 +31,15 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
